# ika

./: .gitattributes  .gitignore  BuildingOnARM64.md  CONTRIBUTING.md  GFXSTREAM-VULKAN.md  GFXSTREAM.md  README.md  ika-build
base/: install-nodejs.sh  setup-nodejs-env.sh  stamp_helper.sh
base/arch/: PKGBUILD  ika-base.install  ika-defaults.install
base/cvd/: .bazelrc  .find-ignore  .shellcheckrc  BUILD.bazel  MODULE.bazel  README.md
base/cvd/build_external/avb/: BUILD.avb.bazel  avb.MODULE.bazel
base/cvd/build_external/casimir/: casimir.MODULE.bazel
base/cvd/build_external/crosvm/: BUILD.bazel  BUILD.minigbm.bazel  PATCH.crosvm-aarch64-block-pread64-source.patch  PATCH.crosvm-composite-duplicate-components.patch  PATCH.crosvm-composite-preserve-spec-fd.patch  PATCH.crosvm-disable-gfxstream-vulkan-apple-16k.patch  PATCH.crosvm-enable-vulkano-gralloc.patch  PATCH.crosvm-gpu-2d-sandbox-source.patch  PATCH.crosvm-gpu-2d-sandbox.patch  PATCH.crosvm-resize-display-devices.patch  PATCH.crosvm-resize-display-vm-control.patch  PATCH.crosvm-resize-display.patch  PATCH.disk-composite-preserve-spec-fd.patch  PATCH.ffmpeg-pkg-config-includes.patch  PATCH.jail-aarch64-block-pread64.patch  PATCH.jail-gpu-host-graphics-libs-optional.patch  PATCH.mesa3d_util-upstream-main-20260520.patch  PATCH.minijail-blktracesetup2.patch  PATCH.minijail-sys_build_rs.patch  PATCH.minijail-sys_common_mk.patch  PATCH.proto_build_tools.patch  PATCH.rutabaga_gfx-cleanup-on-drop.patch  PATCH.rutabaga_gfx-gralloc-vulkano-fallback.patch  PATCH.rutabaga_gfx-upstream-main-20260520.patch  PATCH.rutabaga_gfx_build_rs.patch  PATCH.vm_control-map-dmabuf-directly.patch  README.md  crosvm.MODULE.bazel  crosvm.config.toml
base/cvd/build_external/e2fsprogs/: BUILD.e2fsprogs.bazel  e2fsprogs.MODULE.bazel
base/cvd/build_external/egl_headers/: BUILD.egl_headers.bazel  egl_headers.MODULE.bazel
base/cvd/build_external/f2fs_tools/: f2fs_tools.MODULE.bazel
base/cvd/build_external/gfxstream/: BUILD.bazel  PATCH.gfxstream.blob_page_size_runtime.patch  PATCH.gfxstream.force-vulkan-cleanup-on-teardown.patch  PATCH.gfxstream.gles1-alpha-test-core-profile.patch  PATCH.gfxstream.linux_udmabuf_creator.patch  PATCH.gfxstream.memfd_udmabuf_seals.patch  PATCH.gfxstream.opengles-3.2.patch  PATCH.gfxstream.pool-host-visible-udmabufs.patch  PATCH.gfxstream.sparse-astc-native.patch  PATCH.gfxstream.sparse-compressed-feature-contract.patch  PATCH.gfxstream.udmabuf-broker.patch  PATCH.gfxstream.vulkan-cts-correctness.patch  PATCH.protobuf_deprecation_warning.patch  gfxstream.MODULE.bazel
base/cvd/build_external/icu/: BUILD.icu.bazel  icu.MODULE.bazel  icu_dat_integrity.patch
base/cvd/build_external/libdrm/: BUILD.libdrm.bazel  libdrm.MODULE.bazel
base/cvd/build_external/libwebrtc/: BUILD.libwebrtc.bazel  PATCH.absl_nonnull_compat.patch  PATCH.optional_avx2_dispatch.patch  PATCH.third_party_libyuv.patch  libwebrtc.MODULE.bazel
base/cvd/build_external/mako/: BUILD.mako.bazel
base/cvd/build_external/mesa/: 0001-Avoid-once_flag-redefinition-with-newer-glibc.patch  BUILD.mesa.bazel  mesa.MODULE.bazel
base/cvd/build_external/opengl_headers/: BUILD.opengl_headers.bazel  opengl_headers.MODULE.bazel
base/cvd/build_external/pipewire/: BUILD.pipewire.bazel  pipewire.MODULE.bazel
base/cvd/build_external/spirv_tools/: spirv_tools.MODULE.bazel
base/cvd/build_external/swiftshader/: BUILD.swiftshader.bazel  swiftshader.MODULE.bazel
base/cvd/build_external/vulkan_headers/: BUILD.vulkan_headers.bazel  vulkan_headers.MODULE.bazel
base/cvd/build_external/wayland/: BUILD.wayland.bazel  wayland.MODULE.bazel
base/cvd/cuttlefish/host/commands/append_squashfs_overlay/: append_squashfs_overlay.MODULE.bazel
base/cvd/cuttlefish/host/commands/vhost_user_input/: vhost_user_input.MODULE.bazel
base/cvd/cuttlefish/host/commands/vhost_user_media/: vhost_user_media.MODULE.bazel
base/cvd/cuttlefish/host/graphics/vulkan/: BUILD.bazel  vulkan_icd.json.tmpl
base/cvd/cuttlefish/host/libs/process_monitor/: BUILD.bazel  process_monitor.cc  process_monitor.h  process_monitor_test.cc
base/debian/: changelog  control  ika-base.cuttlefish-host-resources.init  ika-base.lintian-overrides  ika-base.postinst  ika-base.triggers  ika-defaults.postrm  ika-defaults.preinst  rules
base/rpm/: 70-cuttlefish-base.rules  71-cuttlefish-integration.rules  avbtool-wrapper.sh  cuttlefish-add-user-to-groups.sh  cuttlefish-base.spec  cuttlefish-defaults.service  cuttlefish-defaults.sh  cuttlefish-host-resources.service  cuttlefish-host-resources.sh  cuttlefish-host-resources.sysconfig  cuttlefish-integration.sysconfig  cuttlefish-lineageos.spec  cuttlefish-scrcpy.spec  cuttlefish-tmpfiles.conf  cuttlefish-ulimit.sh  cuttlefish.xml  instance_configs.cfg.template
cloud-init-image-for-cuttlefish/: download_fedora.sh  run_qemu.sh  user-data
container/: Containerfile  README.md  image-builder.sh
container/debian/: changelog
container/image/: Containerfile  image-builder.sh
container/rpm/: cuttlefish-container.spec  cuttlefish-podcvd.service  cuttlefish-podcvd.sh  cuttlefish-podcvd.sysconfig
cuttlefish-integration-gigabyte-arm64/: README  update_version_info.sh
cuttlefish-integration-gigabyte-arm64/debian/: changelog
cuttlefish-integration-gigabyte-arm64/rpm/: cuttlefish-integration-gigabyte-arm64.spec
docs/: HostToolsMigration.md  gfxstream-memory-retention.md  index.html
e2etests/: README.md
frontend/: build-webui.sh  install-nodejs.sh  node-intl-segmenter-fallback.cjs  setup-nodejs-env.sh
frontend/arch/: PKGBUILD  ika-orchestration.install  ika-user.install
frontend/debian/: changelog  control  ika-orchestration.lintian-overrides  ika-orchestration.postinst  ika-user.lintian-overrides  ika-user.postinst  rules
frontend/rpm/: cuttlefish-frontend.spec  cuttlefish-host_orchestrator-prepare.sh  cuttlefish-host_orchestrator.service  cuttlefish-operator.sh  (+5 more)
gigabyte-ampere-cuttlefish-installer/: README.md
lineageos/: AndroidProducts.mk  README.md
scrcpy/: README.md
tools/: build_scrcpy_server_aarch64.sh  getchromium  ika  ika-udmabuf-broker
(+427 files in other folders)
