git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "avb",
    build_file = "@//build_external/avb:BUILD.avb.bazel",
    commit = "a06971682bd7a1ee8048a57fc0a0df04353cf66b",
    remote = "https://android.googlesource.com/platform/external/avb",
)
