# this needs to be at parity with with build_external/crosvm/crosvm.config.toml
CROSVM_REMOTE = "https://chromium.googlesource.com/crosvm/crosvm"
CROSVM_REV = "0d750f762c23156132f46979598132de01471355"
MINIGBM_REMOTE = "https://chromium.googlesource.com/chromiumos/platform/minigbm"
MINIGBM_REV = "0c4f081b12d6e92d66dabc0b0f8da11206778848"

# note that this won't use the same source checkout as the git_repository directive below
#
# The following `annotation` directives modify the generated bazel rules for
# individual crates in the crosvm dependency chart.
#
# See https://bazelbuild.github.io/rules_rust/crate_universe_bzlmod.html
crosvm_bin = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crosvm_bin.spec(
    artifact = "bin",
    package = "crosvm",
    features = [
        "android-sparse",
        "android_display",
        "android_display_stub",
        "audio",
        "audio_aaudio",
        "balloon",
        "composite-disk",
        "ffmpeg",
        "fs_runtime_ugid_map",
        "gdb",
        "geniezone",
        "gfxstream",
        "gfxstream_display",
        "gpu",
        "gpu_display",
        "gunyah",
        "libaaudio_stub",
        "media",
        "net",
        "pci-hotplug",
        "pvclock",
        "qcow",
        "stats",
        "tokio",
        "usb",
        "vaapi",
        "video-decoder",
        "video-encoder",
        "virgl_renderer",
        # Vulkan-based rutabaga_gralloc backend. Required on Apple Silicon
        # (Asahi): the bundled minigbm has no asahi driver backend, so
        # gbm_create_device fails on the Apple GPU render node and crosvm is
        # left with only the "system" gralloc backend, which cannot import the
        # dma-buf blobs gfxstream exports for host-visible guest memory
        # (crosvm: "invalid gralloc backend" -> guest ANGLE VK_ERROR_OUT_OF_
        # DEVICE_MEMORY -> black surfaces). The vulkano backend imports/maps
        # those blobs via VK_EXT_external_memory_dma_buf through Honeykrisp,
        # which supports it. vulkano 0.33.0 + deps are already in Cargo.lock.
        "vulkano",
        "wl-dmabuf",
        "zstd-disk",
    ],
    git = CROSVM_REMOTE,
    rev = CROSVM_REV,
)

crosvm_bin.annotation(
    crate = "crosvm",
    gen_all_binaries = True,
    patch_args = ["-p1"],
    patches = [
        "@//build_external/crosvm:PATCH.crosvm-composite-duplicate-components.patch",
        # Sandbox fixes also need crate-specific variants below because
        # crates_universe checks out each published crate with its own root.
        "@//build_external/crosvm:PATCH.crosvm-composite-preserve-spec-fd.patch",
        "@//build_external/crosvm:PATCH.crosvm-gpu-2d-sandbox.patch",
        "@//build_external/crosvm:PATCH.crosvm-resize-display.patch",
        "@//build_external/crosvm:PATCH.crosvm-enable-vulkano-gralloc.patch",
        "@//build_external/crosvm:PATCH.minijail-sys_common_mk.patch",
    ],
    deps = [
        "@@//:gfxstream_backend_import",
    ],
    rustc_flags = [
        # Look for shared libraries in the same directory as the binary.
        "-Clink-arg=-Wl,-rpath,$$ORIGIN",
    ],
)

crosvm_bin.annotation(
    crate = "ffmpeg",
    build_script_env = {
        # Fedora's ffmpeg headers are installed under /usr/include/ffmpeg, but
        # crosvm's build.rs invokes bindgen without forwarding pkg-config's
        # include path. Pass it explicitly so bindings generation can find
        # libavcodec/libavutil/libswscale headers in the Bazel sandbox.
        "BINDGEN_EXTRA_CLANG_ARGS": "-I/usr/include/ffmpeg",
    },
)

# The linked disk crate owns CompositeDiskFile; keep its spec fd reported to
# minijail so the sandbox's close-fds pass does not invalidate Rust-owned Files.
crosvm_bin.annotation(
    crate = "disk",
    patch_args = ["-p1"],
    patches = [
        "@//build_external/crosvm:PATCH.disk-composite-preserve-spec-fd.patch",
    ],
)

crosvm_bin.annotation(
    crate = "v4l2r",
    build_script_env = {
        # v4l2r bindgen starts from /usr/include/linux/videodev2.h, which
        # includes libc headers from Debian's multiarch include directory.
        "BINDGEN_EXTRA_CLANG_ARGS": "-I/usr/include/aarch64-linux-gnu -I/usr/include/x86_64-linux-gnu",
    },
)

crosvm_bin.annotation(
    crate = "mesa3d_util",
    patch_args = ["-p1"],
    patches = ["@//build_external/crosvm:PATCH.mesa3d_util-upstream-main-20260520.patch"],
)

crosvm_bin.annotation(
    crate = "rustix",
    # Latest mesa3d_util uses rustix::thread::futex for cross-domain atomic
    # memory sentinels.
    crate_features = ["thread"],
)

crosvm_bin.annotation(
    crate = "linux-raw-sys",
    # rustix's thread feature pulls in prctl constants.
    crate_features = ["prctl"],
)

crosvm_bin.annotation(
    crate = "devices",
    patch_args = ["-p1"],
    patches = [
        "@//build_external/crosvm:PATCH.crosvm-resize-display-devices.patch",
    ],
)

crosvm_bin.annotation(
    crate = "rutabaga_gfx",
    deps = [
        "@@//:gfxstream_backend_import",
    ],
    build_script_data = ["@@//:minigbm_sources"],
    build_script_rundir = ".",
    rustc_flags = [
        # Look for shared libraries in the same directory as this object.
        "-Clink-arg=-Wl,-rpath,$$ORIGIN",
    ],
    build_script_env = {
        # Disable the build script from trying to automatically locate
        # Gfxstream as the dep is directly provided above.
        "CARGO_FEATURE_GFXSTREAM_STUB": "blah",
        # Force rutabaga_gfx to use the system virglrenderer package instead of
        # expecting crosvm's third_party/virglrenderer source checkout.
        "CROSVM_USE_SYSTEM_VIRGLRENDERER": "1",
    },
    patch_args = ["-p1"],
    patches = [
        "@//build_external/crosvm:PATCH.rutabaga_gfx_build_rs.patch",
        "@//build_external/crosvm:PATCH.rutabaga_gfx-upstream-main-20260520.patch",
    ],
)

# ARM64 sandbox policy and GPU minijail mount fixes for guest SwiftShader.
crosvm_bin.annotation(
    crate = "jail",
    build_script_data_glob = ["seccomp/**"],
    build_script_data = ["@@//:compile_seccomp_policy_exe"],
    build_script_env = {"COMPILE_SECCOMP_POLICY": "$(execpath @@//:compile_seccomp_policy_exe)"},
    patch_args = ["-p1"],
    patches = [
        "@//build_external/crosvm:PATCH.jail-aarch64-block-pread64.patch",
        "@//build_external/crosvm:PATCH.jail-gpu-host-graphics-libs-optional.patch",
    ],
)

# minijail-sys/build.rs invokes `make` to build the minijail C library, so all
# the sources need to be made available to it at runtime in a filegroup.
# rules_rust only checks out the crate directory and the C sources are two
# directories above, so we grab them from the submodule checkout in our crosvm
# git_repository.
crosvm_bin.annotation(
    crate = "minijail-sys",
    build_script_data = ["@@//:minijail_sources"],
    build_script_rundir = ".",
    patch_args = ["-p1"],
    # crates_universe checks out only a subdirectory of the repository, so the
    # file paths in this patch are relative to that directory.
    patches = ["@//build_external/crosvm:PATCH.minijail-sys_build_rs.patch"],
)

# Disable the `path` directives for the generated code as they end up with
# temporary paths within the bazel sandbox.
crosvm_bin.annotation(
    crate = "proto_build_tools",
    patch_args = ["-p1"],
    # crates_universe checks out only a subdirectory of the repository, so the
    # file paths in this patch are relative to that directory.
    patches = ["@//build_external/crosvm:PATCH.proto_build_tools.patch"],
)

crosvm_bin.annotation(
    crate = "vm_control",
    patch_args = ["-p1"],
    patches = ["@//build_external/crosvm:PATCH.crosvm-resize-display-vm-control.patch"],
)

crosvm_bin.from_specs(
    name = "crosvm_bin",
    cargo_config = "@//build_external/crosvm:crosvm.config.toml",
    cargo_lockfile = "@crosvm//:Cargo.lock",
    # Executable dependencies are an unstable cargo feature.
    host_tools = "@rust_host_tools_nightly",
)

use_repo(crosvm_bin, "crosvm_bin")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "crosvm",
    build_file = "@//build_external/crosvm:BUILD.crosvm.bazel",
    commit = CROSVM_REV,
    remote = CROSVM_REMOTE,
    init_submodules = True,
    patch_strip = 1,
    patches = [
        "@//build_external/crosvm:PATCH.crosvm-aarch64-block-pread64-source.patch",
        "@//build_external/crosvm:PATCH.crosvm-composite-duplicate-components.patch",
        "@//build_external/crosvm:PATCH.crosvm-composite-preserve-spec-fd.patch",
        "@//build_external/crosvm:PATCH.crosvm-gpu-2d-sandbox-source.patch",
        "@//build_external/crosvm:PATCH.crosvm-resize-display.patch",
        "@//build_external/crosvm:PATCH.minijail-sys_common_mk.patch",
    ],
)

git_repository(
    name = "minigbm",
    build_file = "@//build_external/crosvm:BUILD.minigbm.bazel",
    commit = MINIGBM_REV,
    remote = MINIGBM_REMOTE,
)
