git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "e2fsprogs",
    build_file = "@//build_external/e2fsprogs:BUILD.e2fsprogs.bazel",
    commit = "43643a57fb2d3368fbacd181a8cd713102d52a1a",
    remote = "https://github.com/tytso/e2fsprogs",
)
