git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "f2fs_tools",
    build_file = "@//build_external/f2fs_tools:BUILD.f2fs_tools.bazel",
    commit = "3ab67256d83a8323b92992155b99c3365c0964f6",
    remote = "https://git.kernel.org/pub/scm/linux/kernel/git/jaegeuk/f2fs-tools",
)
