package(
    default_visibility = [
        "@gfxstream//:__subpackages__",
    ],
)

exports_files([
    "PATCH.gfxstream.build_variables.patch",
    "PATCH.protobuf_deprecation_warning.patch",
    "PATCH.gfxstream.blob_page_size_runtime.patch",
    "PATCH.gfxstream.gles1-alpha-test-core-profile.patch",
    "PATCH.gfxstream.linux_udmabuf_creator.patch",
    "PATCH.gfxstream.memfd_udmabuf_seals.patch",
    "PATCH.gfxstream.opengles-3.2.patch",
])
