git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "gfxstream",
    commit = "c96ea7fcab74e68f4a3cd12edf4a60019aaee462",
    remote = "https://github.com/google/gfxstream.git",
    patch_strip = 1,
    patches = [
        "@//build_external/gfxstream:PATCH.gfxstream.build_variables.patch",
        "@//build_external/gfxstream:PATCH.protobuf_deprecation_warning.patch",
    ],
)
