git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "gfxstream",
    commit = "6e68776cefbe1f1a662bb7321aa98e5348e8c062",
    remote = "https://github.com/google/gfxstream.git",
    patch_strip = 1,
    patches = [
        "@//build_external/gfxstream:PATCH.gfxstream.build_variables.patch",
        "@//build_external/gfxstream:PATCH.protobuf_deprecation_warning.patch",
        "@//build_external/gfxstream:PATCH.gfxstream.blob_page_size_runtime.patch",
        "@//build_external/gfxstream:PATCH.gfxstream.gles1-alpha-test-core-profile.patch",
        "@//build_external/gfxstream:PATCH.gfxstream.linux_udmabuf_creator.patch",
        "@//build_external/gfxstream:PATCH.gfxstream.memfd_udmabuf_seals.patch",
        "@//build_external/gfxstream:PATCH.gfxstream.opengles-3.2.patch",
        # Last-resort cleanup for Vulkan instances which survive normal
        # per-context teardown, before the renderer closes its DRM file.
        "@//build_external/gfxstream:PATCH.gfxstream.force-vulkan-cleanup-on-teardown.patch",
    ],
)
