load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = [
        "@//:android_cuttlefish",
        "@mesa//:__subpackages__",
    ],
)

# Expose Fedora's installed libdrm headers from /usr/include.
cc_library(
    name = "libdrm_fourcc",
    hdrs = [
        "include/drm/drm.h",
        "include/drm/drm_fourcc.h",
        "include/drm/drm_mode.h",
    ],
    strip_include_prefix = "include",
)

cc_import(
    name = "libdrm_shared",
    shared_library = (
        glob(["lib64/libdrm.so"], allow_empty = True) +
        glob(["lib/x86_64-linux-gnu/libdrm.so"], allow_empty = True) +
        glob(["lib/aarch64-linux-gnu/libdrm.so"], allow_empty = True)
    )[0],
)

cc_library(
    name = "libdrm",
    hdrs = [
        "include/drm/drm.h",
        "include/drm/drm_fourcc.h",
        "include/drm/drm_mode.h",
        "include/xf86drm.h",
        "include/xf86drmMode.h",
    ],
    strip_include_prefix = "include",
    deps = [":libdrm_shared"],
)
