git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "mesa",
    build_file = "@//build_external/mesa:BUILD.mesa.bazel",
    commit = "6a02618ccf6c5651ecb9cccbde571eb61fd73592",
    remote = "https://android.googlesource.com/platform/external/mesa3d",
)
