load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(
    default_visibility = ["@//:android_cuttlefish"],
)

cc_library(
    name = "opengl_headers",
    hdrs = glob([
        "include/GL/*.h",
        "include/KHR/*.h",
    ]),
    strip_include_prefix = "include",
)

cc_library(
    name = "GLES_headers",
    hdrs = glob([
        "include/GLES/*.h",
    ]),
    strip_include_prefix = "include",
    deps = [
        "@egl_headers//:egl_headers",
    ],
)

cc_library(
    name = "GLES2_headers",
    hdrs = glob([
        "include/GLES2/*.h",
    ]),
    strip_include_prefix = "include",
    deps = [
        "@egl_headers//:egl_headers",
    ],
)

cc_library(
    name = "GLES3_headers",
    hdrs = glob([
        "include/GLES3/*.h",
    ]),
    strip_include_prefix = "include",
    deps = [
        "@egl_headers//:egl_headers",
    ],
)
