git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "spirv_tools",
    commit = "113784c9cf103b775fdadb1ef194f6b963e24a7e",
    remote = "https://github.com/KhronosGroup/SPIRV-Tools.git",
    patches = [
        "//build_external/spirv_tools:bazel9.patch",
    ],
    patch_strip = 1,
)
