git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "swiftshader",
    build_file = "@//build_external/swiftshader:BUILD.swiftshader.bazel",
    commit = "2843cbcc714fe111e1083127c048a18002bc10ed",
    remote = "https://swiftshader.googlesource.com/SwiftShader.git",
    patch_strip = 1,
    patches = ["@//build_external/swiftshader:bazel9.patch"],
)
