git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "vulkan_headers",
    build_file = "@//build_external/vulkan_headers:BUILD.vulkan_headers.bazel",
    commit = "01393c3df0e5285b54ee6527466513f9e614be94",
    remote = "https://github.com/KhronosGroup/Vulkan-Headers.git",
)
