vhost_user_input_crates = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
    isolate = True,
)
vhost_user_input_crates.from_cargo(
    name = "vhost_user_input_crates",
    manifests = [
        "//cuttlefish/host/commands/vhost_user_input:Cargo.toml",
    ],
    host_tools = "@rust_host_tools_nightly",
)
use_repo(vhost_user_input_crates, "vhost_user_input_crates")
