load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")

package(
    default_visibility = ["//:android_cuttlefish"],
)

expand_template(
    name = "vk_swiftshader_icd",
    out = "vk_swiftshader_icd.json",
    substitutions = {
        "${ICD_LIBRARY_PATH}": "./libvk_swiftshader.so",
    },
    template = "vulkan_icd.json.tmpl",
)

expand_template(
    name = "vk_lavapipe_icd",
    out = "vk_lavapipe_icd.json",
    substitutions = {
        "${ICD_LIBRARY_PATH}": "/usr/lib64/libvulkan_lvp.so",
    },
    template = "vulkan_icd.json.tmpl",
)
